# personal-assistant

./: .gitignore  AGENTS.md  opencode.json
.github/workflows/: deploy-frontend.yml  deploy-infra.yml  deploy-service-to-agentarts.yml
.opencode/agents/: panel-chair.md  panelist-deepseek.md  panelist-gemini.md  panelist-gpt.md  panelist-hermes.md  personal-assistant-client-dev.md  personal-assistant-client-manager.md  personal-assistant-client-reviewer.md  personal-assistant-client-tester.md  personal-assistant-committer.md  personal-assistant-e2e-manager.md  personal-assistant-e2e-reviewer.md  (+16 more)
personal-assistant-client/: .env.production  README.md  index.html  netlify.toml  package-lock.json  package.json  tsconfig.json  vite.config.ts
personal-assistant-e2e/: conftest.py  pyproject.toml
personal-assistant-e2e/tests/features/: test_feature_10_outbound_email_obs.py  test_feature_12_netlify_deployment.py  test_feature_1_1_web_chat.py  test_feature_1_3_multi_llm.py  test_feature_4_inbound_identity_login_flow.py  test_feature_4_inbound_identity_unauthorized.py  test_feature_chore_1_agentarts_deploy.py  test_feature_refactor_2_remove_static_serving.py  test_feature_refactor_4_consolidate_invocations_routes.py  test_feature_session_checkpoint.py
personal-assistant-e2e/tests/regression/: test_bug_1_playground_trailing_slash_404.py  test_bug_2_spa_fallback_not_working.py  test_bug_3_playground_returns_404.py  test_bug_6_vite_playground_proxy_missing.py
personal-assistant-infra/: .gitignore  .terraform.lock.hcl  AGENTS.md  README.md  dns.tf  iam.tf  main.tf  obs.tf  outputs.tf  variables.tf
personal-assistant-meta/: AGENTS.md
personal-assistant-service/: .agentarts_config.yaml  .dockerignore  .env.example  Dockerfile  README.md  chainlit_app.py  config.yaml  openapi.json  pyproject.toml
personal-assistant-service/app/: agent_handler.py  auth.py  llm_config.py  main.py  playground.py  spa_middleware.py
personal-assistant-service/app/routes/: auth.py
personal-assistant-service/app/schemas/: auth.py
personal-assistant-service/app/tools/: __init__.py  email_tools.py  github_tools.py  obs_tools.py
personal-assistant-service/scripts/: create_m365_provider.py  create_sts_provider.py  generate_openapi.py
personal-assistant-service/tests/: conftest.py  test_agent_handler.py  test_auth.py  test_checkpointer.py  test_email_tools.py  test_github_tools.py  test_llm_config.py  test_main.py  test_obs_tools.py
personal-assistant-service/web/: index.html
(+125 files in other folders)
